--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,45 @@
 spring.application.name=AllMyApps
 
 # Configure datasource
-# H2
-# Dialect
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# Driver
-spring.datasource.driverClassName=org.h2.Driver
-# User
-spring.datasource.username=sa
-# Password
-spring.datasource.password=
-# URL in memory
-# spring.datasource.url=jdbc:h2:mem:testdb
-# URL file
-spring.datasource.url=jdbc:h2:file:./data/mydb
-# Extra
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
-
-## Postgres
+## H2
 ## Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 ## Driver
-#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.driverClassName=org.h2.Driver
 ## User
-#spring.datasource.username=carl
+#spring.datasource.username=sa
 ## Password
 #spring.datasource.password=
-## URL
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+## URL in memory
+## spring.datasource.url=jdbc:h2:mem:testdb
+## URL file
+#spring.datasource.url=jdbc:h2:file:./data/mydb
+## Extra
+#spring.h2.console.enabled=true
+#spring.h2.console.settings.web-allow-others=true
+
+# Postgres
+# Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Driver
+spring.datasource.driverClassName=org.postgresql.Driver
+# User
+spring.datasource.username=carl
+# Password
+spring.datasource.password=
+# URL
+spring.datasource.url=jdbc:postgresql://dpg-d0t2s9emcj7s73b54flg-a.oregon-postgres.render.com/carl_2c4f
+
+spring.ai.vectorstore.pgvector.initialize-schema=true
+# embedding size for all-MiniLM-L6-v2
+spring.ai.vectorstore.pgvector.dimensions=384
+spring.ai.vectorstore.pgvector.index-type=hnsw
+spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
 
 # Configure JPA
+# For local
+#spring.jpa.hibernate.ddl-auto=create
+# For staging
 spring.jpa.hibernate.ddl-auto=update
 
 # Server
