Add job title vectors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,9 @@ spring.datasource.url=jdbc:postgresql://dpg-d0t2s9emcj7s73b54flg-a.oregon-postgr
 
 spring.ai.vectorstore.pgvector.initialize-schema=true
 # embedding size for all-MiniLM-L6-v2
-spring.ai.vectorstore.pgvector.dimensions=384
+#spring.ai.vectorstore.pgvector.dimensions=384
+# embedding size for all-mpnet-base-v2
+spring.ai.vectorstore.pgvector.dimensions=768
 spring.ai.vectorstore.pgvector.index-type=hnsw
 spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
 
